--- a/index.html
+++ b/index.html
@@ -4,28 +4,38 @@
   <meta charset="utf-8">
   <title>AudioSpace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="dist/style.css">
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.min.js"></script>
   <script src="https://rtcmulticonnection.herokuapp.com/socket.io/socket.io.js"></script>
   <script src="audiospace.js"></script>
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </head>
 <body>
 
+<div class="header">
+<h2><a href="https://github.com/jywarren/audiospace/">Audiospace</a></h2>
+</div>
+
 <div class="toolbar">
-  <a class="btn btn-lg btn-default" onClick="switchToRoom('as220-' + this.innerText);">Doorstep</a>
-  <a class="btn btn-lg btn-default" onClick="switchToRoom('as220-' + this.innerText);">Printshop</a>
+  <a class="btn btn-lg btn-default btn-success" onClick="toggleColor();switchToRoom('as220-' + this.innerText);">Doorstep</a>
+  <a class="btn btn-lg btn-default" onClick="toggleColor();switchToRoom('as220-' + this.innerText);">Printshop</a>
+  <span>Choose a room to hear audio:</span>
 </div>
 
 <div class="iframe-wrapper">
 <iframe src="https://docs.google.com/presentation/d/1a0sUi3ZlV_1xGyPTu2p6i4tcBw8OZl53xsrGD2X7XiY/edit#slide=id.g5394785bd1_0_444"></iframe>
 </div>
 
+<script>
+function toggleColor() {
+  $('.toolbar a.btn').removeClass('btn-success');
+  $(this).toggleClass('btn-success');
+}
+</script>
 </body>
 </html>
