toggle color fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <script>
 function toggleColor() {
   $('.toolbar a.btn').removeClass('btn-success');
-  $(this).toggleClass('btn-success');
+  $(this).addClass('btn-success');
 }
 </script>
 </body>
